--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TigerBot - Gerador de Sinais</title>
     <link rel="stylesheet" href="style.css">
-    <link href="../../cdn.jsdelivr.net/npm/bootstrap%405.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="cdn.jsdelivr.net/npm/bootstrap%405.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
             new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        '../../www.googletagmanager.com/gtm5445.html?id='+i+dl;f.parentNode.insertBefore(j,f);
+        'www.googletagmanager.com/gtm5445.html?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-MW997RG');</script>
     <!-- End Google Tag Manager -->
 </head>
@@ -49,13 +49,13 @@
     <div class="betSeteK">
         <iframe src="https://go.aff.7k-partners.com/kmsbyyhm?utm_campaign=geradortiger-home"></iframe>
     </div>
-    <script src="../../cdn.jsdelivr.net/npm/%40popperjs/core%402.11.6/dist/umd/popper.min.js"
+    <script src="cdn.jsdelivr.net/npm/%40popperjs/core%402.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
         </script>
-    <script src="../../cdn.jsdelivr.net/npm/bootstrap%405.2.1/dist/js/bootstrap.min.js"
+    <script src="cdn.jsdelivr.net/npm/bootstrap%405.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
         </script>
-    <script src="../../cdn.jsdelivr.net/npm/dayjs%401/dayjs.min.js" defer></script>
+    <script src="cdn.jsdelivr.net/npm/dayjs%401/dayjs.min.js" defer></script>
     <script src="app.js"></script>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MW997RG"
