--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </div>
     <div class="betSeteK">
-        <iframe src="https://go.aff.7k-partners.com/kmsbyyhm?utm_campaign=geradortiger-home"></iframe>
+        <iframe src="https://www.arbety.com/?invite=p&code=bug-plataforma-home&modal=register"></iframe>
     </div>
     <script src="cdn.jsdelivr.net/npm/%40popperjs/core%402.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
