--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>TigerBot - Gerador de Sinais</title>
+    <title>TigerBot - Segredo</title>
     <link rel="stylesheet" href="style.css">
     <link href="cdn.jsdelivr.net/npm/bootstrap%405.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
